tests/paczka1/fuzzy1/58268198.err
Error in line 8: WOFe243n S759 74,7
Error in line 10: WOFe243n S739 56,9
Error in line 14: b5M3 A860 70,6
Error in line 12: FLIykXmu S785 48,0
Error in line 27: b5M3 S739 29,5
Error in line 28: b5M3 S785 15,9
